tests/NormalTests/paczka1/small_fuzzy/66727344.err
Error in line 2: JoyI A589 7,6
Error in line 3: JoyI A712 12,7
Error in line 6: RsCzX A712 37,5
Error in line 5: x0aN0f9Ij S852 18,2
Error in line 9: RsCzX S852 78,3
Error in line 12: S852 A712 90,1
